[gd_scene load_steps=18 format=3 uid="uid://cjc0m57xad887"]

[ext_resource type="Texture2D" uid="uid://oa4enuht0lse" path="res://scenes/FlyScene1/fly_scene.png" id="1_nvpt2"]
[ext_resource type="Script" path="res://scenes/FlyScene1/FlyScene1.gd" id="1_ya6m8"]
[ext_resource type="Script" path="res://addons/MusicManager/music_track.gd" id="2_5ob6j"]
[ext_resource type="AudioStream" uid="uid://rpmotyi2p2fk" path="res://audio/music/minigamesong.mp3" id="3_fbbg3"]
[ext_resource type="Texture2D" uid="uid://dte4xq84xh78b" path="res://addons/tattomoosa.spinner/icons/StatusError.svg" id="3_oevi1"]
[ext_resource type="PackedScene" uid="uid://btwimivy2fuqo" path="res://scenes/FlyScene1/Obstacles/obstacle_cloud_1.tscn" id="3_pcd20"]
[ext_resource type="PackedScene" uid="uid://cb40qf1q6r5oe" path="res://components/StoryCamera2D.tscn" id="3_usohv"]
[ext_resource type="PackedScene" uid="uid://io1tewnbqos3" path="res://scenes/FlyScene1/Obstacles/obstacle_cloud_2.tscn" id="4_t78i8"]
[ext_resource type="PackedScene" uid="uid://dvia2v5tlh7dq" path="res://scenes/FlyScene1/Obstacles/obstacle_tree_1.tscn" id="5_s3to8"]
[ext_resource type="Script" path="res://scenes/FlyScene1/crow_and_potaotes.gd" id="7_fv06a"]
[ext_resource type="Texture2D" uid="uid://dua0o42yskmwx" path="res://dialogic_data/characters/gran_potato/granpatato_smile.png" id="7_tjrji"]
[ext_resource type="Texture2D" uid="uid://cju5jukxjbcww" path="res://dialogic_data/characters/fry/fry_potato_uwu.png" id="8_ss8fb"]
[ext_resource type="Texture2D" uid="uid://1o221ybhna1d" path="res://dialogic_data/characters/crowtato/crowtato_normal.png" id="9_4u30i"]

[sub_resource type="Resource" id="Resource_42dps"]
script = ExtResource("2_5ob6j")
name = ""
artist = ""
track = ExtResource("3_fbbg3")

[sub_resource type="Animation" id="Animation_g11g1"]
resource_name = "Advance"
length = 30.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Obscacles:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-7000, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CrowAndPotaotes:started")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_r0oqf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Obscacles:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CrowAndPotaotes:started")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ebo6c"]
_data = {
"Advance": SubResource("Animation_g11g1"),
"RESET": SubResource("Animation_r0oqf")
}

[node name="FlyScene1" type="Node"]
script = ExtResource("1_ya6m8")
music = SubResource("Resource_42dps")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_nvpt2")
metadata/_edit_lock_ = true

[node name="FailSplash" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 0.470588, 0.419608, 1)
scale = Vector2(10, 10)
texture = ExtResource("3_oevi1")
metadata/_edit_lock_ = true

[node name="StoryCamera2D" parent="." instance=ExtResource("3_usohv")]

[node name="Obscacles" type="Node2D" parent="."]

[node name="ObstacleCloud1" parent="Obscacles" instance=ExtResource("3_pcd20")]
position = Vector2(264, -371)
scale = Vector2(0.8, 0.8)

[node name="ObstacleCloud2" parent="Obscacles" instance=ExtResource("3_pcd20")]
position = Vector2(5266, -96)
scale = Vector2(0.75, 0.75)

[node name="ObstacleCloud3" parent="Obscacles" instance=ExtResource("3_pcd20")]
position = Vector2(2429, -324)
scale = Vector2(1.1, 1.1)

[node name="ObstacleCloud4" parent="Obscacles" instance=ExtResource("4_t78i8")]
position = Vector2(3127, -228)
scale = Vector2(0.6, 0.6)

[node name="ObstacleCloud5" parent="Obscacles" instance=ExtResource("3_pcd20")]
position = Vector2(3488, -494)

[node name="ObstacleCloud6" parent="Obscacles" instance=ExtResource("4_t78i8")]
position = Vector2(4574, -304)

[node name="ObstacleCloud7" parent="Obscacles" instance=ExtResource("4_t78i8")]
position = Vector2(1666, -418)

[node name="ObstacleTree1" parent="Obscacles" instance=ExtResource("5_s3to8")]
position = Vector2(929, 541)

[node name="ObstacleTree2" parent="Obscacles" instance=ExtResource("5_s3to8")]
position = Vector2(2556, 434)
scale = Vector2(1.2, 1.2)

[node name="ObstacleTree3" parent="Obscacles" instance=ExtResource("5_s3to8")]
position = Vector2(4066, 557)

[node name="ObstacleTree4" parent="Obscacles" instance=ExtResource("5_s3to8")]
position = Vector2(4451, 511)

[node name="ObstaclesAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ebo6c")
}

[node name="CrowAndPotaotes" type="Area2D" parent="."]
gravity = 1.0
script = ExtResource("7_fv06a")

[node name="GranSprite2D" type="Sprite2D" parent="CrowAndPotaotes"]
position = Vector2(-106.292, 90.4317)
rotation = -1.96334
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_tjrji")

[node name="FrySprite2D" type="Sprite2D" parent="CrowAndPotaotes"]
position = Vector2(-62.3906, 50.889)
rotation = -0.340339
scale = Vector2(0.125, 0.125)
texture = ExtResource("8_ss8fb")

[node name="CrowSprite2D" type="Sprite2D" parent="CrowAndPotaotes"]
rotation = 0.84823
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_4u30i")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CrowAndPotaotes"]
position = Vector2(-106.292, 90.4317)
rotation = -1.96334
scale = Vector2(0.15, 0.15)
polygon = PackedVector2Array(-150, -249.9, -151.7, -250, -170, -250, -170, -249.2, -179.6, -243, -181.3, -243, -187, -230.4, -187, -219.6, -181, -203.6, -181, -201.2, -166.5, -185.8, -173, -186.8, -173, -188.2, -199.2, -186, -203.6, -186, -214.6, -179, -217, -179, -227, -164.6, -227, -153.3, -215, -139.3, -215, -137.5, -201, -133.6, -201, -131.6, -182.6, -135, -179.3, -135, -158.8, -151, -158, -142.8, -158, -137.5, -149.2, -120.7, -151, -118.8, -164.5, -113, -171.5, -113, -177.5, -116, -179.2, -116, -190, -126.8, -190, -129, -201, -129, -208, -119.7, -208, -116.3, -199.3, -105.6, -206.8, -98, -208.4, -98, -213, -85.4, -213, -73.2, -202.8, -63, -198.3, -63, -193.3, -67, -191.8, -67, -189, -72.5, -189, -84.2, -184.1, -89.2, -175.8, -90, -159.6, -90, -150.6, -93.8, -167.1, -69, -168.3, -69, -175.3, -53, -176.5, -53, -183.5, -29, -184.7, -29, -192, 15.8, -192, 56.2, -187, 85.3, -187, 90.3, -176, 122.4, -176, 125.5, -160, 152.4, -160, 154.8, -142, 174.7, -142, 176.9, -108, 206.8, -108, 208.2, -78, 225.1, -78, 226.5, -35, 239.4, -35, 240.8, 11, 244.8, 11, 246, 55, 245, 68.2, 245, 95.4, 239, 99.5, 239, 132.5, 223, 134.7, 223, 162.6, 199, 166.8, 202.6, 166, 212.9, 166, 217.8, 175.2, 227, 180.8, 227, 186.8, 221, 188.4, 221, 191, 213.3, 191, 204.5, 196.8, 206, 212.3, 206, 221.3, 203, 224.8, 203, 232.7, 196, 235, 196, 235, 186.1, 229, 181, 229, 178.7, 208.5, 181.2, 212.5, 179, 215.9, 179, 220.9, 173, 223, 173, 223, 163.1, 217, 158, 217, 156, 207.5, 156, 195.5, 162, 193.2, 162, 188.2, 166.4, 209.1, 131, 210.5, 131, 223, 90.3, 223, 67.7, 215, 42.7, 215, 39.5, 188.2, -7, 187.3, -7, 177.3, -31, 176.7, -31, 166, -91.3, 166, -96.4, 159, -115.5, 159, -118.5, 147, -140.7, 147, -142.7, 132, -160.7, 132, -162.9, 109, -182.9, 109, -184.2, 79, -200.3, 79, -201.5, 51, -209.5, 51, -210.8, 27, -213.8, 27, -215, -23, -214, -30.3, -214, -56.3, -206, -59.5, -206, -87.6, -191.5, -97.8, -194, -119.4, -194, -128.5, -190.5, -126, -201.8, -126, -222.5, -131, -231.5, -131, -233.9, -142, -243.9, -142, -245.4, -150, -248.5)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="CrowAndPotaotes"]
position = Vector2(-62.3906, 50.889)
rotation = -0.340339
scale = Vector2(0.125, 0.125)
polygon = PackedVector2Array(-17, -244, -17, -242.8, -39.3, -239, -43.4, -239, -71.3, -227, -73.7, -227, -93.7, -212, -95.9, -212, -120.9, -185, -122.1, -185, -142.1, -152, -143.3, -152, -158.4, -115, -159.5, -115, -172.5, -73, -173.6, -73, -183.3, -27, -190, -40.5, -190, -43, -198, -49, -198, -50.5, -208, -53.5, -208, -55.6, -226.1, -51, -228.9, -51, -236.9, -42, -238.5, -42, -241.5, -32, -243.5, -32, -239, -11.6, -239, -8.5, -228, 10.4, -228, 12.8, -209, 31.8, -209, 33.2, -188.5, 44, -186.8, 44, -184, 69.2, -184, 76.3, -178, 99, -178, 103.4, -159, 147.3, -159, 149.7, -135, 181.6, -135, 183.9, -101, 213.8, -101, 215.2, -78, 227.2, -78, 228.5, -53, 236.4, -53, 237.8, 8.89999, 246, 49.2, 246, 77.4, 241, 82.4, 241, 98.4, 235, 101.5, 235, 127.5, 221, 129.7, 221, 142.7, 210, 144.9, 210, 166.8, 187, 168.1, 187, 186.1, 159, 187.3, 159, 199.3, 131, 200.6, 131, 204.7, 111, 205.8, 111, 207, 101.1, 207, 81.8, 204, 67.6, 204, 62.6, 184, 7.5, 198.4, 2, 200.8, 2, 221.7, -17, 223.2, -17, 237.2, -43, 238.5, -43, 243.5, -62, 245.3, -62, 244, -72.2, 244, -76.7, 236, -87.7, 236, -89.2, 226, -94.3, 226, -96, 207.3, -96, 194.3, -86, 192.7, -86, 181, -58.4, 181, -56.9, 171.3, -48, 169, -117.1, 169, -122.4, 158, -152.5, 158, -155.6, 139, -182.7, 139, -184.9, 111, -209.9, 111, -211.2, 71, -231.3, 71, -232.6, 29, -241.7, 29, -243)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="CrowAndPotaotes"]
rotation = 0.84823
scale = Vector2(0.25, 0.25)
polygon = PackedVector2Array(34, -232.2, 34, -230.9, 21.9, -230, 13.7, -230, -15.3, -221, -18.6, -221, -41.6, -206, -43.9, -206, -59.9, -189, -61.2, -189, -81.1, -154, -82.4, -154, -111, -71.3, -111, -68.5, -128, -33.5, -128, -31.8, -133, -26.8, -133, -26.2, -175.6, 1, -177.8, 1, -203.8, 26, -205.1, 26, -226.1, 57, -227.5, 57, -232.5, 75, -234.2, 75, -233, 88.2, -233, 92.7, -225, 102.7, -225, 104.4, -209, 110.4, -209, 112.1, -184.9, 111, -183.5, 111, -185, 117.8, -185, 133.5, -181, 140.4, -181, 143, -173, 149, -173, 150.4, -165.3, 153, -152.6, 153, -132.6, 145, -130.8, 145, -120.8, 155, -119.4, 155, -114, 168.4, -114, 170.9, -104, 179.8, -104, 181.4, -97.4, 184, -85.4, 184, -75.5, 178, -72.3, 178, -50.3, 185, -47.6, 185, -53, 204.7, -53, 214.3, -49, 228, -49, 231.8, -40, 240.8, -40, 243.6, -29.9, 241, -26.8, 241, -22.9, 234, -20.5, 234, -25.4, 211, -25, 206.1, -17, 212, -17, 213.5, 2, 219.4, 2, 221, 11.8, 221, 18.8, 214, 21, 214, 21, 202.1, 15, 197, 15, 195.6, 3.8, 191.8, 5.89999, 192, 41, 192, 41, 204.4, 46, 216.3, 46, 219.7, 56, 231.7, 56, 234, 69.9, 234, 77, 225.7, 77, 217.5, 68, 201.5, 68, 196.7, 88, 203.4, 88, 205.3, 104.3, 203, 107, 203, 113, 194.6, 113, 187.1, 105, 180.1, 133.5, 165, 135.8, 165, 159.8, 142, 161.1, 142, 180.1, 111, 181.6, 111, 187.6, 84, 189.2, 84, 186, 44.8, 186, 38.7, 172.6, -14, 171.8, -14, 167.7, -43, 167, -43, 167, -62.6, 172.7, -91, 174, -91, 174, -122.3, 168, -143, 168, -146.5, 156, -168.7, 156, -170.8, 148, -179.8, 148, -181.9, 129, -200, 129, -201.1, 115, -210.2, 115, -211.3, 81, -225.4, 81, -226.8)

[connection signal="animation_finished" from="ObstaclesAnimationPlayer" to="." method="_on_obstacles_animation_player_animation_finished"]
[connection signal="area_entered" from="CrowAndPotaotes" to="." method="_on_crow_and_potaotes_area_entered"]
